Open Mod UI > Tools and click History for full change details:

- improved "Characters on fire should emit light" to also extend to heroes